# JapaneseLearn

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  run_log.txt
.claude/: CLAUDE.md
.claude/agents/: project-owner.md  rust-developer.md  slint-developer.md  slint-tester.md  task-manager.md
.claude/redesign/: 1-0.md
.claude/rules/: architecture.md  architecture_diagram.puml  architecture_diagram_milestone1.puml  atomic-commit-rule.md  code-style.md  commit-msg-format.md  general-programming-practice.md  libD-code-style.md  rust-code-style.md  slint-code-style.md  slint-flickable-pattern.md  slint-position-layout.md  slint-test-format.md  task-planning.md
.claude/specs/: analytic-v1.md  constitution.md  extended-vocab.md  plan.md  requirements.md
.claude/tasks/: tasks.md
.github/prompts/: speckit.bub.6-4.report.md  speckit.bug.6-5.report.md  speckit.bug.6-8.callflow.puml  speckit.bug.6.4.callflow.puml  speckit.bug.6.7.callflow.puml  speckit.bug.6.7.report.md  speckit.clarify.prompt.md  speckit.constitution.prompt.md  speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md  speckit.subtask.6-8-1.prompt.md  speckit.subtask.6-8-2.prompt.md  speckit.subtask.6-9-1.prompt.md  speckit.subtask.6-B-1.prompt.md  speckit.subtask.6-B-2-1.prompt.md  speckit.subtask.6-R-5.prompt.md  speckit.subtask.6-S-3.prompt.md  speckit.subtask.6-S-4-1.prompt.md  speckit.subtask.6-T1-1.prompt.md  speckit.subtask.6-T1-2.prompt.md  speckit.subtask.R1-1.prompt.md  speckit.subtask.R1-10.prompt.md  speckit.subtask.R1-5.prompt.md  speckit.tasks.prompt.md
.specify/: init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: markdown-format.md  testing-report.md
lib/common_component/: common_component_lib.slint
lib/exercise_generator/: Cargo.toml
lib/flashcard/: Cargo.toml  build.rs
lib/persistent_data/: Cargo.toml
presentation/: index.html  slides.md  theme.css
src/: main.rs
ui/: main_window.slint
(+109 files in other folders)
