[package]
name = "japanese_learn"
version = "0.1.0"
authors = [""]
edition = "2021"
description = "Japanese learning flashcards app using Rust and Slint."
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"

[dependencies]
slint = { version = "1.16.1", features = ["compat-1-0"] }

[build-dependencies]
slint-build = "1.16.1"
