[workspace]
members = [".", "lib/flashcard", "lib/persistent_data", "lib/exercise_generator", "lib/vocabulary", "test/flashcard"]
resolver = "2"

[workspace.dependencies]
slint = { version = "1.16.1", features = ["compat-1-0"] }
slint-build = { version = "1.16.1", features = ["experimental-module-builds"] }
flashcard = { path = "lib/flashcard" }

[package]
name = "japanese_learn"
version = "0.1.0"
authors = [""]
edition = "2021"
description = "Japanese learning flashcards app using Rust and Slint."
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"

[dependencies]
slint = { workspace = true }
flashcard = { path = "lib/flashcard" }
persistent_data = { path = "lib/persistent_data" }
vocabulary = { path = "lib/vocabulary" }

[build-dependencies]
slint-build = { workspace = true }

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2" }
